fixing the sifts and closeshift buttons adding the calculations

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
 
-
-
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,14 +24,15 @@ a:hover {
   color: #535bf2;
 }
 
-
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-
+@theme {
+  /* Define 'font-times' utility */
+  --font-times: "Times New Roman", serif;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -41,7 +40,6 @@ h1 {
     background-color: #ffffff;
   }
 }
-
 
 @media print {
   body * {
@@ -66,7 +64,7 @@ h1 {
     visibility: hidden;
   }
 
-  #print-section, 
+  #print-section,
   #print-section * {
     visibility: visible;
   }
@@ -80,7 +78,6 @@ h1 {
     left: 10mm; /* for 80mm thermal printer */
     top: 0;
     width: 80mm; /* for 80mm thermal printer */
-
   }
 }
 @page {
@@ -90,5 +87,4 @@ h1 {
 #print-section {
   font-size: 12px;
   font-family: monospace;
-  
 }
